fixed weird CSS logo overflow

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -52,6 +52,7 @@ header {
       transform: scaleX(2);
       margin: 0 1px;
       border-radius: 10px;
+      overflow: hidden;
     }
     width: 50%;
     float: left;
